# grenade-examples

./: LICENSE  default.nix  grenade-examples.cabal  zift.hs
app/: Main.hs
src/: Import.hs
src/Grenade/: Examples.hs
src/Grenade/Examples/CNN/: Network.hs  Param.hs
src/Grenade/Examples/MNIST/: DataSet.hs  Load.hs  Parser.hs
src/Grenade/Examples/MNIST/Parser/: Internal.hs
src/Grenade/Examples/NN/: Network.hs  Param.hs
test/: TestImport.hs
test/Grenade/: NetSpec.hs
